# src/Routes/FreteRouter.js
@@ -5,5 +5,7 @@ const { VerifyToken, AdminAuth, DeliveryAuth } = require('../Helpers/AuthAccess'
 router.get('/list/', DeliveryAuth, FreteController.ListFrete);
 router.post('/register', AdminAuth, FreteController.RegisterFrete);
 router.post('/requestShipping', DeliveryAuth, FreteController.RequestShipping);
+router.put('/updateFrete', AdminAuth, FreteController.UpdateFrete)
+
 
 module.exports = router
