# src/Routes/VehicleRouter.js
@@ -5,6 +5,6 @@ const { VerifyToken, AdminAuth, DeliveryAuth } = require('../Helpers/AuthAccess'
 
 router.get('/list', AdminAuth, VehicleController.ListVehicle);
 router.post('/register', AdminAuth, VehicleController.RegisterVehicle)
-
+router.put('/vehicleUpdate', AdminAuth, VehicleController.UpdateVehicle)
 
 module.exports = router
